src/Sum/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from Sum/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pExp -> Exp                                 (0)
	Integer -> L_integ                                 (1)
	PIdent -> L_PIdent                                 (2)
	Exp -> PIdent                                      (3)
	Exp -> Exp '+' Integer                             (4)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'+'            { PT _ (TS _ 1) }
	L_integ        { PT _ (TI $$) }
	L_PIdent       { PT _ (T_PIdent _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pExp     rule  0
	Integer         rule  1
	PIdent          rule  2
	Exp             rules 3, 4

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	L_PIdent       shift, and enter state 5

	PIdent         goto state 3
	Exp            goto state 4

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'+'            reduce using rule 1
	%eof           reduce using rule 1


State 3

	Exp -> PIdent .                                     (rule 3)

	'+'            reduce using rule 3
	%eof           reduce using rule 3


State 4

	%start_pExp -> Exp .                                (rule 0)
	Exp -> Exp . '+' Integer                            (rule 4)

	'+'            shift, and enter state 6
	%eof           accept


State 5

	PIdent -> L_PIdent .                                (rule 2)

	'+'            reduce using rule 2
	%eof           reduce using rule 2


State 6

	Exp -> Exp '+' . Integer                            (rule 4)

	L_integ        shift, and enter state 2

	Integer        goto state 7

State 7

	Exp -> Exp '+' Integer .                            (rule 4)

	'+'            reduce using rule 4
	%eof           reduce using rule 4


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 5
Number of terminals: 3
Number of non-terminals: 4
Number of states: 8
